--- a/index.qmd
+++ b/index.qmd
@@ -105,7 +105,7 @@ It is simple to create an interactive line chart with minimal code. Below is an 
 ```
 
 ```{=html}
-<div id = "graph1" style = "width: 800px; height: 400px; margin: auto; display: block;"></div>
+<div id = "graph1" style = "width: 100%; height: 400px; margin: auto; display: block;"></div>
 
 <script>
   document.addEventListener("DOMContentLoaded", function() {
@@ -134,7 +134,7 @@ Dygraphs makes it easy to zoom and pan across the timeline easily.
 To zoom, drag across the part of the graph you want to look at closer. To pan, hold shift and drag in the direction you want to move in. To reset the graph, double click. The video below illustrates this.
 
 <div style = "text-align: center;">
-  <video width = "720" height = "400" controls>
+  <video style = "max-width: 100%; height: auto;", controls>
     <source src = "zooming_and_panning.mp4" type = "video/mp4">
     Your browser does not support the video tag.
   </video>
@@ -145,7 +145,7 @@ To zoom, drag across the part of the graph you want to look at closer. To pan, h
 Dygraphs allows plotting of multiple series on the same graph for easy trend comparisons.
 
 ```html
-<div id = "graph2" style = "width: 800px; height: 400px; margin: auto; display: block;"></div>
+<div id = "graph2" style = "width: 100%; height: 400px; margin: auto; display: block;"></div>
 
 <script>
   document.addEventListener("DOMContentLoaded", function() {
@@ -168,7 +168,7 @@ Dygraphs allows plotting of multiple series on the same graph for easy trend com
 ```
 
 ```{=html}
-<div id = "graph2" style = "width: 800px; height: 400px; margin: auto; display: block;"></div>
+<div id = "graph2" style = "width: 100%; height: 400px; margin: auto; display: block;"></div>
 
 <script>
   document.addEventListener("DOMContentLoaded", function() {
@@ -195,7 +195,7 @@ Dygraphs allows plotting of multiple series on the same graph for easy trend com
 Dygraphs allows user to highlight key data points using annotations.
 
 ```html
-<div id = "graph3" style = "width: 800px; height: 400px; margin: auto; display: block;"></div>
+<div id = "graph3" style = "width: 100%; height: 400px; margin: auto; display: block;"></div>
 
 <script>
   document.addEventListener("DOMContentLoaded", function() {
@@ -225,7 +225,7 @@ Dygraphs allows user to highlight key data points using annotations.
 ```
 
 ```{=html}
-<div id = "graph3" style = "width: 800px; height: 400px; margin: auto; display: block;"></div>
+<div id = "graph3" style = "width: 100%; height: 400px; margin: auto; display: block;"></div>
 
 <script>
   document.addEventListener("DOMContentLoaded", function() {
@@ -259,7 +259,7 @@ Dygraphs allows user to highlight key data points using annotations.
 Dygraphs is optimized to handle millions of data points without lag.
 
 ```html
-<div id = "graph4" style = "width: 800px; height: 400px; margin: auto; display: block;"></div>
+<div id = "graph4" style = "width: 100%; height: 400px; margin: auto; display: block;"></div>
 
 <script>
   document.addEventListener("DOMContentLoaded", function() {
@@ -282,7 +282,7 @@ Dygraphs is optimized to handle millions of data points without lag.
 ```
 
 ```{=html}
-<div id = "graph4" style = "width: 800px; height: 400px; margin: auto; display: block;"></div>
+<div id = "graph4" style = "width: 100%; height: 400px; margin: auto; display: block;"></div>
 
 <script>
   document.addEventListener("DOMContentLoaded", function() {
@@ -321,7 +321,7 @@ To illustrate, we have stored the following data in a CSV and JSON file.
 ### Loading CSV
 
 ```html
-<div id = "graph5" style = "width: 800px; height: 400px; margin: auto; display: block;"></div>
+<div id = "graph5" style = "width: 100%; height: 400px; margin: auto; display: block;"></div>
 
 <script>
   document.addEventListener("DOMContentLoaded", function() {
@@ -341,7 +341,7 @@ To illustrate, we have stored the following data in a CSV and JSON file.
 ```
 
 ```{=html}
-<div id = "graph5" style = "width: 800px; height: 400px; margin: auto; display: block;"></div>
+<div id = "graph5" style = "width: 100%; height: 400px; margin: auto; display: block;"></div>
 
 <script>
   document.addEventListener("DOMContentLoaded", function() {
@@ -363,7 +363,7 @@ To illustrate, we have stored the following data in a CSV and JSON file.
 ### Loading JSON
 
 ```html
-<div id = "graph6" style = "width: 800px; height: 400px; margin: auto; display: block;"></div>
+<div id = "graph6" style = "width: 100%; height: 400px; margin: auto; display: block;"></div>
 
 <script>
   document.addEventListener("DOMContentLoaded", function() {
@@ -388,7 +388,7 @@ To illustrate, we have stored the following data in a CSV and JSON file.
 ```
 
 ```{=html}
-<div id = "graph6" style = "width: 800px; height: 400px; margin: auto; display: block;"></div>
+<div id = "graph6" style = "width: 100%; height: 400px; margin: auto; display: block;"></div>
 
 <script>
   document.addEventListener("DOMContentLoaded", function() {
@@ -418,7 +418,7 @@ To illustrate, we have stored the following data in a CSV and JSON file.
 Dygraphs dynamically updates graphs for live data visualization.
 
 ```{=html}
-<div id = "graph7" style = "width: 800px; height: 400px; margin: auto; display: block;"></div>
+<div id = "graph7" style = "width: 100%; height: 400px; margin: auto; display: block;"></div>
 
 <script>
   document.addEventListener("DOMContentLoaded", function() {
