--- a/index.qmd
+++ b/index.qmd
@@ -416,6 +416,35 @@ To illustrate, we have stored the following data in a CSV and JSON file.
 
 Dygraphs dynamically updates graphs for live data visualization.
 
+```html
+<div id = "graph7" style = "width: 100%; height: 400px; margin: auto; display: block;"></div>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    let data = [];
+    let startTime = new Date().getTime();
+    for (let i = 30; i >= 0; i--) {
+      data.push([new Date(startTime - i * 2000), Math.random() * 100]);
+    }
+    let graph = new Dygraph(document.getElementById("graph7"), data, {
+      title: 'Optimized Real-Time Graph',
+      xlabel: 'Time',
+      ylabel: 'Value',
+      labels: ['Time', 'Value'],
+      colors: ['blue'],
+      legend: 'always',
+    });
+    setInterval(() => {
+      let newTime = new Date();  
+      let newValue = Math.random() * 100;  
+      data.push([newTime, newValue]);  
+      if (data.length > 30) data.shift();  
+      graph.updateOptions({ file: data });  
+    }, 2500);
+  });
+</script>
+```
+
 ```{=html}
 <div id = "graph7" style = "width: 100%; height: 400px; margin: auto; display: block;"></div>
 
