--- a/index.qmd
+++ b/index.qmd
@@ -427,7 +427,7 @@ Dygraphs dynamically updates graphs for live data visualization.
       data.push([new Date(startTime - i * 2000), Math.random() * 100]);
     }
     let graph = new Dygraph(document.getElementById("graph7"), data, {
-      title: 'Optimized Real-Time Graph',
+      title: 'Real Time Graph',
       xlabel: 'Time',
       ylabel: 'Value',
       labels: ['Time', 'Value'],
@@ -456,7 +456,7 @@ Dygraphs dynamically updates graphs for live data visualization.
       data.push([new Date(startTime - i * 2000), Math.random() * 100]);
     }
     let graph = new Dygraph(document.getElementById("graph7"), data, {
-      title: 'Optimized Real-Time Graph',
+      title: 'Real Time Graph',
       xlabel: 'Time',
       ylabel: 'Value',
       labels: ['Time', 'Value'],
