--- a/index.qmd
+++ b/index.qmd
@@ -504,7 +504,7 @@ Some common possible use cases are:
 
 Dygraphs is a powerful and lightweight JavaScript library that makes it easy to visualize large time-series datasets with interactive features. Dygraphs provides a solution, whether you need real-time updates, zooming and panning, or multi-axis support for dynamic data visualization.
 
-With its ability to work with huge datasets, support for different data formats, and synchronization capabilities, Dygraphs is an excellent choice for anyone who deals with time series data. It is a wonderful option to consider if you need a charting library that is customizable and easy to embed.
+With its ability to work with huge datasets, support for different data formats, and synchronization capabilities, Dygraphs is an excellent choice for anyone who deals with time series data and is looking for a charting library that is customizable and easy to embed.
 ---
 
 # References {#references}
