--- a/index.qmd
+++ b/index.qmd
@@ -93,7 +93,7 @@ It is simple to create an interactive line chart with minimal code. Below is an 
                "2025-02-03,150\n" +
                "2025-02-04,250\n";
 
-    // Creating Dygraph
+    // Creating Dygraph element
     new Dygraph(document.getElementById("graph1"), data, {
       title: 'Basic Line Chart',
       xlabel: 'Date',
@@ -105,16 +105,19 @@ It is simple to create an interactive line chart with minimal code. Below is an 
 ```
 
 ```{=html}
+<!-- Creating div, specifying width and height and ensuring it is centered -->
 <div id = "graph1" style = "width: 100%; height: 400px; margin: auto; display: block;"></div>
 
 <script>
   document.addEventListener("DOMContentLoaded", function() {
+    // Defining data to graph
     var data = "Date,Value\n" +
                "2025-02-01,100\n" +
                "2025-02-02,200\n" +
                "2025-02-03,150\n" +
                "2025-02-04,250\n";
-    
+
+    // Creating Dygraph element
     new Dygraph(document.getElementById("graph1"), data, {
       title: 'Basic Line Chart',
       xlabel: 'Date',
@@ -505,6 +508,7 @@ Some common possible use cases are:
 Dygraphs is a powerful and lightweight JavaScript library that makes it easy to visualize large time-series datasets with interactive features. Dygraphs provides a solution, whether you need real-time updates, zooming and panning, or multi-axis support for dynamic data visualization.
 
 With its ability to work with huge datasets, support for different data formats, and synchronization capabilities, Dygraphs is an excellent choice for anyone who deals with time series data and is looking for a charting library that is customizable and easy to embed.
+
 ---
 
 # References {#references}
