--- a/index.qmd
+++ b/index.qmd
@@ -513,11 +513,15 @@ With its ability to work with huge datasets, support for different data formats,
 
 # Video Submission {#video-submission}
 
-<div style = "text-align: center;">
-  <video style = "max-width: 100%; height: auto;" controls>
-    <source src = "https://youtu.be/YD_PESiFyCg" type = "video/mp4">
-    Your browser does not support the video tag.
-  </video>
+<div style="text-align: center;">
+  <iframe 
+    style = "width: 100%; height: 400px;" 
+    src = "https://www.youtube.com/embed/YD_PESiFyCg" 
+    title = "ES116 Probability Statistics and Data Visualization Exposition Assignment: Dygraphs" 
+    frameborder = "0" 
+    allow = "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+    allowfullscreen>
+  </iframe>
 </div>
 
 ---
